--- a/main.ui
+++ b/main.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QTableWidget" name="add">
     <property name="geometry">
      <rect>
       <x>133</x>
@@ -22,6 +22,19 @@
       <width>533</width>
       <height>400</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>520</y>
+      <width>121</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>добавить кофе</string>
     </property>
    </widget>
   </widget>
